# Stock-Sentiment-Trackerr

./: .gitignore  .pre-commit-config.yaml  Makefile  PRODUCTION_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 001_initial_schema.py
backend/scripts/: seed_data.py
backend/src/api/: main.py
backend/src/api/middleware/: auth.py  cors.py  rate_limit.py
backend/src/api/routes/: health.py  movers.py  news.py  prices.py  sentiment.py
backend/src/api/websocket/: handlers.py  manager.py
backend/src/core/: config.py  database.py  logging.py  redis_client.py
backend/src/models/: news.py  price.py  schemas.py
backend/src/services/: alert_service.py  cache_service.py  sentiment_analyzer.py
backend/src/services/collectors/: alpha_vantage.py  binance.py  news_api.py  reddit.py
backend/src/services/processors/: price_processor.py  text_cleaner.py
backend/src/tasks/: celery_app.py  price_tasks.py  sentiment_tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_sentiment.py
configs/: prometheus.yml  redis.conf
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/styles/: globals.css  theme.css
nginx/: nginx.conf
