[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-sentiment-tracker"
version = "1.0.0"
description = "Production-grade stock sentiment analysis platform"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "websockets==13.0",

  "pydantic==2.9.0",
  "pydantic-settings==2.5.2",

  "sqlalchemy==2.0.35",
  "alembic==1.13.3",
  "asyncpg==0.29.0",
  "psycopg2-binary==2.9.9",

  "redis[hiredis]==5.1.0",

  "celery==5.4.0",
  "flower==2.0.1",

  "httpx==0.27.2",
  "aiohttp==3.10.5",

  "pandas==2.2.3",
  "numpy==2.1.0",

  "transformers==4.44.2",
  "torch==2.4.1",
  "vaderSentiment==3.3.2",
  "spacy==3.7.6",
  "scikit-learn==1.5.2",
  "joblib==1.4.2",
  "mlflow==2.16.0",

  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",

  "prometheus-client==0.21.0",
  "structlog==24.4.0",

  "python-dotenv==1.0.1",
  "tenacity==9.0.0",
  "praw==7.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "factory-boy==3.3.1",
  "faker==30.1.0",
  "black==24.8.0",
  "isort==5.13.2",
  "flake8==7.1.1",
  "mypy==1.11.2",
  "ruff==0.6.8",
  "bandit==1.7.10",
  "pre-commit==3.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
omit = ["tests/*", "migrations/*", "scripts/*"]
